# story-board

./: .gitignore  Makefile  README.md  boot.txt  stack.yaml  story-board.cabal
example/: Main.hs
src/Graphics/: Storyboard-TMP.hs  Storyboard.hs
src/Graphics/Storyboard/: Act.hs  Behavior.hs  Bling.hs  Box.hs  Deck.hs  Environment.hs  Highlight.hs  Images.hs  Layout.hs  Literals.hs  Markup.hs  Mosaic.hs  Paragraph.hs  Prelude.hs  Prose.hs  Slide.hs  Tile.hs  Types.hs
src/Graphics/Storyboard/Types/: Basic.hs
story-board-active/: story-board-active.cabal  story-board-diagrams.cabal
story-board-active/example/: Main.hs
story-board-active/src/Graphics/Storyboard/: Active.hs
story-board-diagrams/: LICENSE  story-board-diagrams.cabal
story-board-diagrams/Graphics/Storyboard/: Diagrams.hs
story-board-diagrams/example/: Main.hs
story-board-diagrams/src/Graphics/Storyboard/: Diagrams.hs
