name:                story-board-active
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Graphics.Storyboard.Active
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      src
  build-depends:       active      == 0.1.0.*,
                       base        >= 4.5 && < 4.8,
                       story-board == 0.1.*
  default-language:    Haskell2010
  ghc-options:         -Wall

flag example
  Description:         Build the examples
  Default:             False

executable story-board-active-example
  if flag(example)
    buildable:	       True
  else
    buildable:	       False
  main-is:             Main.hs




  build-depends:       active             == 0.1.*,
                       base               >= 4.5 && < 4.8,
                       blank-canvas       == 0.5.*,
                       story-board        == 0.1.*,
                       story-board-active == 0.1.*
  hs-source-dirs:      example
  default-language:    Haskell2010
  GHC-options:         -threaded -Wall
